@@ -1,9 +1,9 @@
 package de.tum.cit.aet.artemis.atlas.dto;
 
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
+import java.util.Set;
 
 import org.hibernate.Hibernate;
 import org.jspecify.annotations.Nullable;
@@ -27,15 +27,15 @@ public record CourseCompetencyResponseDTO(long id, String title, @Nullable Strin
      * @return the DTO
      */
     public static CourseCompetencyResponseDTO of(CourseCompetency competency) {
-        List<CompetencyProgressDTO> progress = Collections.emptyList();
+        List<CompetencyProgressDTO> progress = List.of();
         if (Hibernate.isInitialized(competency.getUserProgress())) {
-            progress = Optional.ofNullable(competency.getUserProgress()).orElse(Collections.emptySet()).stream().map(CompetencyProgressDTO::of).toList();
+            progress = Optional.ofNullable(competency.getUserProgress()).orElse(Set.of()).stream().map(CompetencyProgressDTO::of).toList();
         }
         StandardizedCompetency linkedStandardizedCompetency = competency.getLinkedStandardizedCompetency();
         Long linkedStandardizedCompetencyId = linkedStandardizedCompetency != null ? linkedStandardizedCompetency.getId() : null;
         return new CourseCompetencyResponseDTO(competency.getId(), competency.getTitle(), competency.getDescription(), competency.getTaxonomy(), competency.getSoftDueDate(),
                 competency.getMasteryThreshold(), competency.isOptional(), competency.getType(), LinkedCourseCompetencyDTO.of(competency.getLinkedCourseCompetency()),
-                linkedStandardizedCompetencyId, progress, null, Collections.emptyList(), Collections.emptyList());
+                linkedStandardizedCompetencyId, progress, null, List.of(), List.of());
     }
 
     /**
@@ -47,8 +47,8 @@ public record CourseCompetencyResponseDTO(long id, String title, @Nullable Strin
     public static CourseCompetencyResponseDTO ofWithCourse(CourseCompetency competency) {
         var base = of(competency);
         return new CourseCompetencyResponseDTO(base.id(), base.title(), base.description(), base.taxonomy(), base.softDueDate(), base.masteryThreshold(), base.optional(),
-                base.type(), base.linkedCourseCompetency(), base.linkedStandardizedCompetencyId(), base.userProgress(), CourseInfoDTO.of(competency.getCourse()),
-                Collections.emptyList(), Collections.emptyList());
+                base.type(), base.linkedCourseCompetency(), base.linkedStandardizedCompetencyId(), base.userProgress(), CourseInfoDTO.of(competency.getCourse()), List.of(),
+                List.of());
     }
 
     /**
@@ -59,13 +59,13 @@ public record CourseCompetencyResponseDTO(long id, String title, @Nullable Strin
      */
     public static CourseCompetencyResponseDTO ofWithLearningObjects(CourseCompetency competency) {
         var base = of(competency);
-        List<CompetencyExerciseLinkResponseDTO> exerciseLinks = Collections.emptyList();
+        List<CompetencyExerciseLinkResponseDTO> exerciseLinks = List.of();
         if (Hibernate.isInitialized(competency.getExerciseLinks())) {
-            exerciseLinks = Optional.ofNullable(competency.getExerciseLinks()).orElse(Collections.emptySet()).stream().map(CompetencyExerciseLinkResponseDTO::of).toList();
+            exerciseLinks = Optional.ofNullable(competency.getExerciseLinks()).orElse(Set.of()).stream().map(CompetencyExerciseLinkResponseDTO::of).toList();
         }
-        List<CompetencyLectureUnitLinkResponseDTO> lectureUnitLinks = Collections.emptyList();
+        List<CompetencyLectureUnitLinkResponseDTO> lectureUnitLinks = List.of();
         if (Hibernate.isInitialized(competency.getLectureUnitLinks())) {
-            lectureUnitLinks = Optional.ofNullable(competency.getLectureUnitLinks()).orElse(Collections.emptySet()).stream().map(CompetencyLectureUnitLinkResponseDTO::of).toList();
+            lectureUnitLinks = Optional.ofNullable(competency.getLectureUnitLinks()).orElse(Set.of()).stream().map(CompetencyLectureUnitLinkResponseDTO::of).toList();
         }
 
         return new CourseCompetencyResponseDTO(base.id(), base.title(), base.description(), base.taxonomy(), base.softDueDate(), base.masteryThreshold(), base.optional(),
