@@ -53,7 +53,7 @@ public class LearnerProfileResource {
      */
     private void validateProfileField(int value, String fieldName) {
         if (value < MIN_PROFILE_VALUE || value > MAX_PROFILE_VALUE) {
-            String message = String.format("%s (%d) is outside valid bounds [%d, %d]", fieldName, value, MIN_PROFILE_VALUE, MAX_PROFILE_VALUE);
+            String message = "%s (%d) is outside valid bounds [%d, %d]".formatted(fieldName, value, MIN_PROFILE_VALUE, MAX_PROFILE_VALUE);
             throw new BadRequestAlertException(message, LearnerProfile.ENTITY_NAME, fieldName.toLowerCase() + "OutOfBounds", true);
         }
     }
