@@ -3,7 +3,6 @@ package de.tum.cit.aet.artemis.programming.web;
 import static de.tum.cit.aet.artemis.core.config.Constants.PROFILE_CORE;
 
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -347,10 +346,10 @@ public class ProgrammingSubmissionResource {
         // remove automatic results before sending to client
         var manualResults = programmingSubmission.getManualResults();
         if (correctionRound >= manualResults.size()) {
-            programmingSubmission.setResults(Collections.emptyList());
+            programmingSubmission.setResults(List.of());
         }
         else {
-            programmingSubmission.setResults(Collections.singletonList(manualResults.get(correctionRound)));
+            programmingSubmission.setResults(List.of(manualResults.get(correctionRound)));
         }
 
         return ResponseEntity.ok(programmingSubmission);
