@@ -2,7 +2,6 @@ package de.tum.cit.aet.artemis.core.util;
 
 import static de.tum.cit.aet.artemis.core.config.ArtemisConstants.SPRING_PROFILE_TEST;
 import static de.tum.cit.aet.artemis.core.config.Constants.ARTEMIS_FILE_PATH_PREFIX;
-import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.awaitility.Awaitility.await;
@@ -84,6 +83,8 @@ import de.tum.cit.aet.artemis.assessment.domain.ComplaintType;
 import de.tum.cit.aet.artemis.assessment.domain.Feedback;
 import de.tum.cit.aet.artemis.assessment.domain.Result;
 import de.tum.cit.aet.artemis.assessment.domain.TutorParticipation;
+import de.tum.cit.aet.artemis.assessment.dto.FeedbackDTO;
+import de.tum.cit.aet.artemis.assessment.dto.ResultDTO;
 import de.tum.cit.aet.artemis.assessment.dto.UserNameAndLoginDTO;
 import de.tum.cit.aet.artemis.assessment.repository.ComplaintRepository;
 import de.tum.cit.aet.artemis.assessment.repository.ParticipantScoreRepository;
@@ -183,6 +184,7 @@ import de.tum.cit.aet.artemis.quiz.domain.QuizSubmission;
 import de.tum.cit.aet.artemis.quiz.util.QuizExerciseUtilService;
 import de.tum.cit.aet.artemis.text.domain.TextExercise;
 import de.tum.cit.aet.artemis.text.domain.TextSubmission;
+import de.tum.cit.aet.artemis.text.dto.ComplaintResponseRequestDTO;
 import de.tum.cit.aet.artemis.text.dto.TextAssessmentUpdateDTO;
 import de.tum.cit.aet.artemis.text.repository.TextExerciseRepository;
 import de.tum.cit.aet.artemis.text.util.TextExerciseFactory;
@@ -2112,7 +2114,7 @@ public class CourseTestService {
         var quizExercise = quizExerciseUtilService.createQuiz(ZonedDateTime.now().minusHours(5), ZonedDateTime.now().minusHours(2), QuizMode.INDIVIDUAL);
         quizExercise = exerciseRepo.save(quizExercise);
         participationUtilService.createAndSaveParticipationForExercise(quizExercise, userPrefix + "student2");
-        var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, Collections.synchronizedList(new ArrayList<>()), Collections.emptyMap());
+        var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, Collections.synchronizedList(new ArrayList<>()), Map.of());
         assertThat(archivePath).isNotEmpty();
         extractAndAssertContent(archivePath.orElseThrow(), quizSubmission);
     }
@@ -2121,7 +2123,7 @@ public class CourseTestService {
     public void testArchiveCourseWithQuizExerciseCannotExportExerciseDetails() throws IOException {
         var course = courseUtilService.createCourse();
         var quizSubmission = quizExerciseUtilService.addQuizExerciseToCourseWithParticipationAndSubmissionForUser(course, userPrefix + "student1", false);
-        var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, Collections.synchronizedList(new ArrayList<>()), Collections.emptyMap());
+        var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, Collections.synchronizedList(new ArrayList<>()), Map.of());
         assertThat(archivePath).isNotEmpty();
         Predicate<Path> missingPathPredicate = path -> "Exercise-Details-quiz.json".equals(path.getFileName().toString());
         extractAndAssertMissingContent(archivePath.orElseThrow(), quizSubmission, missingPathPredicate);
@@ -2134,7 +2136,7 @@ public class CourseTestService {
         var quizSubmission = quizExerciseUtilService.addQuizExerciseToCourseWithParticipationAndSubmissionForUser(course, userPrefix + "student1", false);
         try (MockedStatic<ImageIO> mockedImageIO = mockStatic(ImageIO.class)) {
             mockedImageIO.when(() -> ImageIO.read(any(File.class))).thenThrow(new IOException());
-            var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+            var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
             assertThat(archivePath).isNotEmpty();
             Predicate<Path> missingPathPredicate = path -> path.getFileName().toString().contains("dragAndDropQuestion") && path.getFileName().toString().endsWith(".pdf");
             extractAndAssertMissingContent(archivePath.orElseThrow(), quizSubmission, missingPathPredicate);
@@ -2148,7 +2150,7 @@ public class CourseTestService {
         quizExerciseUtilService.addQuizExerciseToCourseWithParticipationAndSubmissionForUser(course, userPrefix + "student1", false);
         try (MockedStatic<DataExportUtil> mockedFiles = mockStatic(DataExportUtil.class)) {
             mockedFiles.when(() -> DataExportUtil.createDirectoryIfNotExistent(any())).thenThrow(new IOException());
-            var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+            var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
             assertThat(archivePath).isNotEmpty();
         }
 
@@ -2162,7 +2164,7 @@ public class CourseTestService {
         try (MockedStatic<org.apache.commons.io.FileUtils> mockedFiles = mockStatic(org.apache.commons.io.FileUtils.class)) {
             mockedFiles.when(() -> org.apache.commons.io.FileUtils.writeLines(argThat(file -> file.toString().contains(fileName)), anyString(), anyList()))
                     .thenThrow(new IOException());
-            var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+            var archivePath = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
             assertThat(archivePath).isNotEmpty();
             Predicate<Path> missingPathPredicate = path -> path.getFileName().toString().contains(fileName) && path.getFileName().toString().endsWith(".txt");
             extractAndAssertMissingContent(archivePath.orElseThrow(), quizSubmission, missingPathPredicate);
@@ -2393,7 +2395,7 @@ public class CourseTestService {
         }
         else {
             assertThat(foundUsers).isNull();
-            return emptyList();
+            return List.of();
         }
     }
 
@@ -2435,7 +2437,7 @@ public class CourseTestService {
 
     private List<Path> archiveCourseAndExtractFiles(Course course) throws IOException {
         List<String> exportErrors = Collections.synchronizedList(new ArrayList<>());
-        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
         assertThat(exportedCourse).isNotEmpty();
 
         // Extract the archive
@@ -2457,7 +2459,7 @@ public class CourseTestService {
 
         MockedStatic<Files> mockedFiles = mockStatic(Files.class);
         mockedFiles.when(() -> Files.createDirectories(argThat(path -> path.toString().contains("exports")))).thenThrow(IOException.class);
-        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
         mockedFiles.close();
 
         assertThat(exportedCourse).isEmpty();
@@ -2469,7 +2471,7 @@ public class CourseTestService {
 
         MockedStatic<Files> mockedFiles = mockStatic(Files.class);
         mockedFiles.when(() -> Files.createDirectory(argThat(path -> path.toString().contains("course-exercises")))).thenThrow(IOException.class);
-        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
         mockedFiles.close();
 
         assertThat(exportedCourse).isEmpty();
@@ -2498,7 +2500,7 @@ public class CourseTestService {
 
         MockedStatic<Files> mockedFiles = mockStatic(Files.class);
         mockedFiles.when(() -> Files.createDirectory(argThat(path -> path.toString().contains("exams")))).thenThrow(IOException.class);
-        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Collections.emptyMap());
+        Optional<Path> exportedCourse = courseExamExportService.exportCourseForArchive(course, courseArchivesDirPath, exportErrors, Map.of());
         mockedFiles.close();
 
         assertThat(exportedCourse).isEmpty();
@@ -3028,11 +3030,14 @@ public class CourseTestService {
         Feedback feedback5 = new Feedback();
         feedback5.setCredits(2.0);
         feedback5.setReference(TextExerciseFactory.generateTextBlock(0, 5, "test5").getId());
-        var feedbackListForComplaint = Arrays.asList(feedback1, feedback2, feedback3, feedback4, feedback5);
+        var feedbackListForComplaint = Arrays.asList(feedback1, feedback2, feedback3, feedback4, feedback5).stream().map(FeedbackDTO::of).toList();
 
-        var assessmentUpdate = new TextAssessmentUpdateDTO(feedbackListForComplaint, complaintResponse, null, new HashSet<>());
+        var assessmentUpdate = new TextAssessmentUpdateDTO(feedbackListForComplaint,
+                new ComplaintResponseRequestDTO(complaintResponse.getId(), complaintResponse.getResponseText(),
+                        new ComplaintResponseRequestDTO.ComplaintRequestDTO(complaintResponse.getComplaint().getId(), complaintResponse.getComplaint().isAccepted())),
+                null, new HashSet<>());
         request.putWithResponseBody("/api/text/participations/" + result1.getSubmission().getParticipation().getId() + "/submissions/" + result1.getSubmission().getId()
-                + "/text-assessment-after-complaint", assessmentUpdate, Result.class, HttpStatus.OK);
+                + "/text-assessment-after-complaint", assessmentUpdate, ResultDTO.class, HttpStatus.OK);
 
         // Feedback request
         Complaint feedbackRequest = new Complaint().complaintType(ComplaintType.MORE_FEEDBACK);
@@ -3042,11 +3047,14 @@ public class CourseTestService {
         ComplaintResponse feedbackResponse = complaintUtilService.createInitialEmptyResponse(userPrefix + "tutor2", feedbackRequest);
         feedbackResponse.getComplaint().setAccepted(true);
         feedbackResponse.setResponseText("accepted");
-        var feedbackListForMoreFeedback = Arrays.asList(feedback1, feedback2, feedback3, feedback4);
+        var feedbackListForMoreFeedback = Arrays.asList(feedback1, feedback2, feedback3, feedback4).stream().map(FeedbackDTO::of).toList();
 
-        final var feedbackUpdate = new TextAssessmentUpdateDTO(feedbackListForMoreFeedback, feedbackResponse, null, new HashSet<>());
+        final var feedbackUpdate = new TextAssessmentUpdateDTO(feedbackListForMoreFeedback,
+                new ComplaintResponseRequestDTO(feedbackResponse.getId(), feedbackResponse.getResponseText(),
+                        new ComplaintResponseRequestDTO.ComplaintRequestDTO(feedbackResponse.getComplaint().getId(), feedbackResponse.getComplaint().isAccepted())),
+                null, new HashSet<>());
         request.putWithResponseBody("/api/text/participations/" + result2.getSubmission().getParticipation().getId() + "/submissions/" + result2.getSubmission().getId()
-                + "/text-assessment-after-complaint", feedbackUpdate, Result.class, HttpStatus.OK);
+                + "/text-assessment-after-complaint", feedbackUpdate, ResultDTO.class, HttpStatus.OK);
 
         // Wait for async participant score calculation to complete
         // Use longer timeout for slow CI environments where async tasks may take longer
@@ -3405,7 +3413,7 @@ public class CourseTestService {
         course = objectMapper.readValue(result.getResponse().getContentAsString(), Course.class);
 
         assertThat(course.getCourseIcon()).as("Course icon got stored").isNotNull();
-        String requestUrl = String.format("%s%s", ARTEMIS_FILE_PATH_PREFIX, course.getCourseIcon());
+        String requestUrl = "%s%s".formatted(ARTEMIS_FILE_PATH_PREFIX, course.getCourseIcon());
         var imgResult = request.performMvcRequest(get(requestUrl)).andExpect(status().isOk()).andExpect(content().contentType(MediaType.IMAGE_PNG)).andReturn();
         assertThat(imgResult.getResponse().getContentAsByteArray()).isNotEmpty();
 
@@ -3552,6 +3560,16 @@ public class CourseTestService {
     // Test
     public void testGetExistingExerciseDetails_asEditor() throws Exception {
         Course course = courseUtilService.createCourseWith2ProgrammingExercisesTextExerciseTutorAndEditor();
-        request.get("/api/course/courses/" + course.getId() + "/existing-exercise-details?exerciseType=programming", HttpStatus.OK, CourseExistingExerciseDetailsDTO.class);
+        // The sample programming exercises in the fixture above are not actually associated with the course, so add one that
+        // really belongs to it (course set + persisted) with a known title / short name.
+        ProgrammingExercise programmingExercise = programmingExerciseUtilService.addProgrammingExerciseToCourse(course);
+
+        CourseExistingExerciseDetailsDTO details = request.get("/api/course/courses/" + course.getId() + "/existing-exercise-details?exerciseType=programming", HttpStatus.OK,
+                CourseExistingExerciseDetailsDTO.class);
+
+        assertThat(details.exerciseTitles()).contains(programmingExercise.getTitle());
+        // Regression guard: short names were never returned because includeShortNames compared the lowercase request param
+        // ("programming") against ExerciseType.PROGRAMMING.toString() ("PROGRAMMING"), which is always false (#12940).
+        assertThat(details.shortNames()).contains(programmingExercise.getShortName());
     }
 }
