@@ -2,7 +2,6 @@ package de.tum.cit.aet.artemis.programming.service;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -225,7 +224,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractProgramming
 
     @Test
     void shouldSetAllTestCasesToInactiveIfFeedbackListIsEmpty() {
-        var result = generateResult(Collections.emptyList(), Collections.emptyList());
+        var result = generateResult(List.of(), List.of());
         feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
 
         Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
@@ -253,7 +252,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractProgramming
         // We do not want to use the test cases generated in the setup
         testCaseRepository.deleteAll(testCaseRepository.findByExerciseId(programmingExercise.getId()));
 
-        var result = generateResult(List.of("test1", "test2"), Collections.emptyList());
+        var result = generateResult(List.of("test1", "test2"), List.of());
         feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
 
         Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
@@ -282,7 +281,7 @@ class ProgrammingExerciseFeedbackCreationServiceTest extends AbstractProgramming
         // We do not want to use the test cases generated in the setup
         testCaseRepository.deleteAll(testCaseRepository.findByExerciseId(programmingExercise.getId()));
 
-        var result = generateResult(List.of("test1", "test2"), Collections.emptyList());
+        var result = generateResult(List.of("test1", "test2"), List.of());
         feedbackCreationService.generateTestCasesFromBuildResult(result, programmingExercise);
 
         Set<ProgrammingExerciseTestCase> testCases = testCaseRepository.findByExerciseId(programmingExercise.getId());
